--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1></h1>
+<html>
+<head>
+	<title>Abhyuday S N Samaj kalyan trust</title>
+</head>
+<body>
+<h1>Abhyuday S N Samaj kalyan trust</h1>
+<h1>Comming Soon</h1>
+</body>
+</html>
+
