--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12">
-                    <h1>Abhyuday S N Samaj kalyan trust</h1>
+                    <h1 style="text-transform: uppercase;">Abhyuday S N Samaj Kalyan Trust</h1>
                     <h2 class="subtitle">We're working hard to launch our website and we'll be ready very soon</h2>
                     <br/>
              
