Updated about and contact page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body ng-app="web-app">
   <div class="header-open" ng-include src="'templates/header.html'"></div>
   <div ng-view></div>
+  <div class="header-open" ng-include src="'templates/footer.html'"></div>
   <script src="js/lib/jquery-2.1.4.min.js"></script>
   <script src="js/lib/bootstrap.min.js"></script>
   <script src = "js/lib/angular.min.js"></script>
